# fract-ol

./: CMakeLists.txt  Makefile  a.out  create_window.c  draw.c  fractol.c  fractol.h  fractol.h.gch  fractols.c  hooks.c  julia.c  main.c  validation.c
libft/: CMakeLists.txt  ft_atoi_base.c  ft_strsplit.c  libft.h
